# VAIAWorkshop25Public

./: .gitignore  README.md  pyproject.toml
notebooks/: lecture01.ipynb  lecture02.ipynb  lecture03.ipynb  lecture04.ipynb  lecture05.ipynb  lecture06.ipynb  lecture07.ipynb  lecture08.ipynb  lecture09.ipynb
src/: utils.py
src/room_acoustics/: analysis.py  fdn.py  plot.py  synthesis.py
src/spatial_audio/: hrtf.py  plot.py  sirr.py  sofa_parser.py  spatial.py
